* bugfix: "drop after" dropzone icon was cut off from the top

--- a/asset/css/task.css
+++ b/asset/css/task.css
@@ -124,7 +124,7 @@ div.task .subtasks .task:last-child {
 	background-position:0 -650px;
 }
 #dragDropMarker.after div {
-	background-position:0 -680px;
+	background-position:0 -678px;
 }
 #dragDropMarker.before div {
 	background-position:0 -710px;
